feat(push): allow pushing to and pulling from different targets (#14)
